--- a/02/index.html
+++ b/02/index.html
@@ -1,144 +1,143 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Siege Of Kremlin</title>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>Siege Of Kremlin</title>
 	</head>
-<body>
-	<table bgcolor="black" cellpadding="0">
-		<tr>
-			<td height="40px" width="60px"><img src="tank1.png" alt="tank1"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"><img src="tank2.png" alt="tank2"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
-			<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
-			<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
-			<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
-			<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
-			<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px" valign="bottom"><img src="wall.png" alt="wall" height="20px" width="60px"></td>
-			<td height="40px" width="60px" valign="bottom"><img src="wall.png" alt="wall" height="20px" width="60px"></td>
-			<td height="40px" width="60px" valign="bottom"><img src="wall.png" alt="wall" height="20px" width="60px"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-		<tr>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"><img src="chicken.png" alt="chicken"></td>
-			<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
-			<td height="40px" width="60px"></td>
-		</tr>
-<br>
-			</table>
-
-</body>
+	<body>
+		<table bgcolor="black" cellpadding="0">
+			<tr>
+				<td height="40px" width="60px"><img src="tank1.png" alt="tank1"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"><img src="tank2.png" alt="tank2"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
+				<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
+				<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
+				<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
+				<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="armor.png" alt="armor"></td>
+				<td height="40px" width="60px"><img src="bushes.png" alt="bushes"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px" valign="bottom"><img src="wall.png" alt="wall" height="20" width="60"></td>
+				<td height="40px" width="60px" valign="bottom"><img src="wall.png" alt="wall" height="20" width="60"></td>
+				<td height="40px" width="60px" valign="bottom"><img src="wall.png" alt="wall" height="20" width="60"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+			<tr>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"><img src="chicken.png" alt="chicken"></td>
+				<td height="40px" width="60px"><img src="wall.png" alt="wall"></td>
+				<td height="40px" width="60px"></td>
+			</tr>
+		</table>
+	</body>
 </html>
