--- a/01/index.html
+++ b/01/index.html
@@ -151,9 +151,8 @@
 					</ul>
 				</nav>
 			</div>
-
 			<div class="copy">
-				<a href="https://land.gov.ua/">Copyright 2020. All rights reserved. Developed by Nahorny Taras</a>
+				<a href="https://land.gov.ua/">All rights reserved (C). Developed by Nahorny Taras</a>
 			</div>
 		</footer>
 	</body>
